# ORM

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  ORM.hpp.in  README.md
.github/workflows/: auto-clang-format.yml  ci.yaml  deploy.yaml
example/: ORM.cpp
example/users/: users.hpp
lib/: CMakeLists.txt
lib/include/ORM/: ORM-version.hpp  ORM.hpp  fields.hpp  forward-decl.hpp  join_rule.hpp  limits.hpp  rules.hpp  table.hpp
lib/include/ORM/CRUD/: delete.hpp  insert.hpp  select.hpp  update.hpp  utils.hpp
lib/include/ORM/db/connectors/: interface.hpp
lib/include/ORM/db/connectors/MockDB/: data.hpp  init.hpp
lib/include/ORM/db/types/: db_type_wrappers.hpp  primitive_type_wrapper.hpp
lib/include/ORM/details/: fundamental_type.hpp  member_pointer.hpp  orm_tuple.hpp  result_type.hpp  string_literal.hpp  warnings.hpp
lib/include/ORM/std/: string_view
lib/include/ORM/tools/: property.hpp  rule.hpp  string_literal.hpp
lib/include/ORM/utils/: concept.hpp  mem_ptr_utils.hpp  mem_ptr_wrapper.hpp  placeholder.hpp  query_input_data.hpp  rule_operators.hpp
lib/include/ORM/wrappers/: db_types.hpp
lib/pfr/include/: pfr.hpp
lib/pfr/include/pfr/: config.hpp  core.hpp  functions_for.hpp  functors.hpp  io.hpp  io_fields.hpp  ops.hpp  ops_fields.hpp  traits.hpp  traits_fwd.hpp  tuple_size.hpp
lib/pfr/include/pfr/detail/: cast_to_layout_compatible.hpp  config.hpp  core.hpp  core14_classic.hpp  core14_loophole.hpp  core17.hpp  core17_generated.hpp  detectors.hpp  fields_count.hpp  for_each_field_impl.hpp  functional.hpp  io.hpp  make_flat_tuple_of_references.hpp  make_integer_sequence.hpp  offset_based_getter.hpp  possible_reflectable.hpp  rvalue_t.hpp  sequence_tuple.hpp  size_array.hpp  size_t_.hpp  stdtuple.hpp  tie_from_structure_tuple.hpp  unsafe_declval.hpp
lib/src/ORM/: CMakeLists.txt  ORM-version.cpp  ORM.cpp  fields.cpp  limits.cpp  rules.cpp  table.cpp
lib/src/ORM/CRUD/: insert.cpp  select.cpp  utils.cpp
lib/src/ORM/db/connectors/: interface.cpp
lib/src/ORM/db/connectors/MockDB/: data.cpp  init.cpp
lib/src/ORM/details/: fundamental_type.cpp  member_pointer.cpp  orm_tuple.cpp  result_type.cpp  string_literal.cpp  warnings.cpp
lib/src/ORM/tools/: property.cpp  rule.cpp
reports/codeql_report/: index.html  stats.html
reports/docs/: annotated.html  classes.html  dir_01c1dafe829f518be6a92172e5966836.html  dir_3b65c597bd3700a800b1d86aa3e1d1b1.html  dir_4161c0705bd27b81b7022fca2f016058.html  dir_497746f1f8facbb93dad2111bc3f9d6d.html  dir_49ec22118ce515b1ecb586b62840705c.html  dir_55dceb950a855522d12a94819eae8355.html  dir_59b5518781d50b3add651e214d78d065.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5cfbc25a2a26fe117ba1c87374e14247.html  dir_6405fefcf63feb15db57f067ecd4a013.html  dir_720233cc6617450ee27c2bef4f41d57e.html  dir_73f9c9c1703804fef3fdd0f9daeb1642.html  dir_80cb9cc82046aa3e7d3a7afb07aab22c.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  dir_ac20a3447782b991fa43ce1db882b205.html  dir_adfd009155c3a4a2b1fd37b8bff5132a.html  dir_afbb72c546206c196fc78cb479ec0d19.html  dir_b6f46801568c7f9e7d54e6966895ca9a.html  dir_c7e06dc1c68da8b6a8a8f4b4e7e6d3f0.html  dir_cd35b64ea5279a24ef94e529ee41b597.html  dir_e2ca425204f7c99b605d225f0494e94c.html  dir_f659d6d2252e987ce55099e9ef8f4369.html  dir_f87451b9abef9a8b996bcf9dade459bd.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_a.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  (+88 more)
reports/docs/d0/d07/: structpfr_1_1detail_1_1greater__impl.html
reports/docs/d0/d0b/: rules_8cpp.html  rules_8cpp_source.html
reports/docs/d0/d0d/: classwebframe_1_1_o_r_m_1_1details_1_1get__placeholders__and__properties_3_01std_1_1tuple_3_4_01_4.html  structpfr_1_1detail_1_1is__aggregate__initializable__n.html
reports/docs/d0/d24/: classwebframe_1_1_o_r_m_1_1details_1_1result__t.html
reports/docs/d0/d4b/: classwebframe_1_1_o_r_m_1_1details_1_1_primitive_wrapper.html
reports/docs/d2/dc6/: io_8hpp.html  (+1 more)
reports/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+112 more)
tests/: CMakeLists.txt
tests/ORM/: CMakeLists.txt  main.cpp
tests/ORM/checks/: lvalue.hpp  rvalue.hpp
tests/ORM/specs/: fields.hpp  init.cpp  init.hpp  rules.hpp  table.hpp
tests/lib/: fakeit.hpp
tests/lib/moka/: moka.h
(+384 files in other folders)
